# aiverify

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  LICENSE.md  License.md  NOTICE  NOTICE.md  README.md  SECURITY.md  TEST.md  combined-test-report.json  coverage.json  deploy_plugin.sh  dev-requirements.txt  index.html  install_aiv_api_lib_run_examples.sh  jest.config.js  mkdocs.yml  model_artifact_base_regression_20250721_1618.json  package-lock.json  package.json  plugin.meta.json  pyproject.toml  requirements.txt  ruff.toml  sitemap.xml  test-report.html  test-report.json
aiverify-apigw/: .coveragerc  .flake8  .pytest.ini  Dockerfile  Dockerfile.ci  NOTICE.md  README.md  install-amd64.sh  install-arm64.sh  pyproject.toml  run.sh
aiverify-apigw/aiverify-apigw-node/: .gitignore  bundler.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  validateMDX.ts  validateSummaryMDX.ts
aiverify-apigw/aiverify_apigw/: __main__.py
aiverify-apigw/aiverify_apigw/lib/: constants.py  database.py  file_utils.py  filestore.py  logging.py  plugin_store.py  s3.py  schemas_utils.py  synax_checker.py  test_engine.py  utils.py  validators.py
aiverify-apigw/aiverify_apigw/models/: __init__.py  base_model.py  input_block_data_model.py  plugin_model.py  project_model.py  project_template_model.py  test_artifact_model.py  test_dataset_model.py  test_model_model.py  test_result_model.py  test_run_model.py  uploaded_file_model.py  user_group.py  user_group_model.py  user_model.py
aiverify-apigw/aiverify_apigw/routers/: input_block_data_router.py  plugin_router.py  project_router.py  project_template_router.py  storage_router.py  test_dataset_router.py  test_model_router.py  test_result_router.py  test_run_router.py
aiverify-apigw/aiverify_apigw/schemas/: __init__.py  algorithm.py  base_model.py  input_block.py  load_examples.py  model_api.py  plugin.py  project.py  project_template.py  template.py  test_dataset.py  test_model.py  test_result.py  test_run.py  widget.py
aiverify-apigw/tests/: conftest.py
aiverify-apigw/tests/lib/: test_file_utils.py  test_plugin_store.py  test_schemas_utils.py  test_syntax_checker.py  test_test_engine.py  test_utils.py  test_validators.py
aiverify-apigw/tests/mocks/: mock_data_plugin.py  mock_data_project.py  mock_input_block_data.py  mock_plugin_meta.py  mock_plugin_path.py  mock_project_meta.py  mock_test_dataset.py  mock_test_model.py  mock_test_result.py  mock_test_run.py
aiverify-apigw/tests/routers/: test_input_block_data_router.py  test_plugin_router.py  test_project_router.py  test_project_template_router.py  test_storage_router.py  test_test_dataset_router.py  test_test_model_router.py  test_test_result_router.py  test_test_run_router.py
aiverify-test-engine/: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  Dockerfile  NOTICE.md  README.md  combined-test-report.json  mytestmodel.keras  pyproject.toml  requirements.txt
aiverify-test-engine-worker/: .env  .gitignore  Dockerfile  Dockerfile.algorithm.template  README.md  install-amd64.sh  install-arm64.sh  pyproject.toml
aiverify-test-engine-worker/lib/: client.py  contants.py  task_queue.py
aiverify-test-engine-worker/src/aiverify_test_engine_worker/: __main__.py
aiverify-test-engine-worker/tests/: __init__.py  conftest.py
aiverify-test-engine-worker/tests/lib/: test_client.py  test_filecache.py
aiverify-test-engine-worker/tests/pipeline/: test_pipeline.py
aiverify-test-engine/aiverify_test_engine/: __init__.py  __main__.py
aiverify-test-engine/ci/: run-flake8.sh  run-pip-audit.sh  run-test.sh
aiverify-test-engine/tests/: test_algorithm_manager.py  test_data_converter.py  test_data_manager.py  test_delimitermetadata.py  test_error.py  test_error_manager.py  test_generate_uuid.py  test_imagemetadata.py  test_import_modules.py  test_itestresult.py  test_json_utils.py  test_log_manager.py  test_log_utils.py  test_model_manager.py  test_pipeline_manager.py  test_pluginmetadata.py  test_plugins_manager.py  test_redis_base.py  test_redis_pubsub.py  test_redis_stream.py  test_simple_progress.py  test_time.py  test_url_utils.py  test_validate_checks.py  test_zipfile_utils.py
stock-plugins/aiverify.stock.accumulated-local-effect/: README.md  plugin.meta.json  pyproject.toml
test-engine-api/: pyproject.toml
test-engine-api/test_engine_api/: __init__.py  algorithm_info.py  api.py  test_argument.py  test_processing.py  test_validation.py
test-engine-app/: .example_env  .gitignore  README.md  coverage.json  pyproject.toml  requirements.txt  run_unit_test.sh  test-report.html  test-report.json
test-engine-app/ci/: createBadges.py  run-flake8.sh  run-pip-audit.sh  run-test.sh
test-engine-app/test_engine_app/: app_logger.py  test_engine_app.py  worker.py
test-engine-app/tests/: conftest.py  test_algorithm_info.py  test_app_logger.py  test_engine_app.py  test_environment_variables.py  test_redis.py  test_service.py  test_task.py  test_task_result.py  test_worker.py
test-engine-core/: coverage.json  pyproject.toml  requirements.txt  setup.py  test-report.html  test-report.json
test-engine-core-modules/: README.md  coverage.json  pyproject.toml  pytest.ini  requirements.txt  test-report.html  test-report.json
test-engine-core-modules/ci/: run-flake8.sh
test-engine-core-modules/tests/: test_delimiterdata.py  test_delimiterserializer.py  test_imageserializer.py  test_joblibserializer.py  test_pandasdata.py  test_rdsserializer.py  test_rmodel.py  test_sklearnmodel.py  test_sklearnpipeline.py  test_tensorflowmodel.py  test_tensorflowserializer.py  test_xgboostmodel.py
test-engine-core/test_engine_core/: __init__.py
test-engine-core/tests/: test_data_manager.py  test_delimitermetadata.py  test_error_manager.py  test_model_manager.py  test_pipeline_manager.py  test_plugins_manager.py  test_redis_base.py  test_redis_pubsub.py  test_redis_stream.py  test_simple_progress.py  test_time.py  test_url_utils.py  test_validate_checks.py  test_zipfile_utils.py
(+3584 files in other folders)
