[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Documentation = "https://github.com/aiverify-foundation/aiverify/tree/v2.x#readme"
Issues = "https://github.com/aiverify-foundation/aiverify/issues"
Source = "https://github.com/aiverify-foundation/aiverify/tree/v2.x"

[project]
name = "aiverify-apigw"
version = "2.2.0"
description = 'The apigw provides middleware functionality for the aiverify portal'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [{ name = "Peck Yoke", email = "leong_peck_yoke@imda.gov.sg" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "fastapi[standard]>=0.112.0",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.32",
  "boto3>=1.35.6",
  "jsonschema==4.*",
  "pydantic==2.*",
  "openapi-spec-validator==0.*",
  "valkey[libvalkey]==6.*",
]

[project.optional-dependencies]
dev = ["aiverify-test-engine[dev]", "faker>=28.1.0"]
test = ["pytest", "pytest-mock", "faker>=28.1.0", "aiverify-test-engine"]

[tool.hatch.envs.default]
post-install-commands = ["pip install -e ../aiverify-test-engine[all]"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default.scripts]
dev = "python -m aiverify_apigw"

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.11"]

[tool.hatch.envs.hatch-test]
extra-dependencies = ["faker>=28.1.0", "aiverify-test-engine"]

[tool.ruff.lint]
preview = true
select = ["E20", "E21", "E22", "E23", "E24", "E3", "F401", "F8"]

[tool.coverage.run]
source_pkgs = ["aiverify_apigw"]
branch = true
parallel = true

[tool.coverage.paths]
aiverify_apigw = ["aiverify_apigw/", "*/aiverify-apigw/aiverify_apigw"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
