[project]
name = "aiverify-test-engine"
version = "2.0.1"
authors = [{ name = "AI Verify" }]
description = "AI Verify Test Engine provides core interfaces, converters, data, model and plugin managers to facilitate the development of tests for AI systems. It is used as a base library for all AI Verify official stock-plugins and can be used to develop custom plugins."
dependencies = [
    "joblib==1.4.2",
    "pillow==10.4.0",
    "libclang==16.0.6",
    "numpy==1.26.4",
    "scikit-learn==1.5.2",
    "pandas==2.2.2",
    "scipy==1.14.1",
    "httpx==0.26.0",
    "openapi-schema-validator==0.6.2",
    "aiometer==0.5.0",
    "async-timeout==4.0.3",
    "attrs==23.2.0",
    "jsonschema-specifications==2023.12.1",
    "jsonschema==4.21.1",
    "referencing==0.33.0",
    "rpds-py==0.17.1",
    "setuptools==75.1.0",
    "requests==2.32.3",
    "pydantic==2.*",
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "Apache Software License 2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
]

[project.optional-dependencies]
tensorflow = ["tensorflow==2.14.0"]

gbm = ["lightgbm==4.5.0", "xgboost==2.1.1"]

pytorch = ["torch>=2.0", "torchvision>=0.15.0"]

all = ["aiverify-test-engine[tensorflow]", "aiverify-test-engine[gbm]", "aiverify-test-engine[pytorch]"]

dev = [
    "aiverify-test-engine[all]",
    "ruff==0.7.1",
    "pre-commit==3.5.0",
    "pytest==7.4.3",
    "coverage==7.3.2",
    "pytest-mock==3.12.0",
    "pytest-cov==5.0.0",
    "pytest-json-report==1.5.0",
    "pytest-json==0.4.0",
    "pytest-html==4.1.1",
    "hatch==1.12.0",
    "anybadge==1.14.0",
]

[tool.ruff.lint]
preview = true
select = ["E20", "E21", "E22", "E23", "E24", "E3", "F401", "F8"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
    "aiverify_test_engine/",
    "tests/",
    "AUTHORS.rst",
    "LICENSE",
    "pyproject.toml",
    "README.md",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
