[tool.poetry]
name = "test-engine-pypi"
version = "0.10.0"
description = "AI Verify is an AI governance testing framework and software toolkit that validates the performance of AI systems against a set of internationally recognised principles through standardised tests."
authors = ["AI Verify"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.24.3"
jsonschema = "4.21.1"
python-dotenv = "1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
coverage = "^7.3.2"
pytest-mock = "^3.12.0"
flake8 = "^6.1.0"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"