[project]
name = "test-engine-api"
version = "0.10.0"
authors = [
    { name="AI Verify" }
]
description = "This core project will support critical functionalities to support plugins and apps."
dependencies = [
    "numpy==1.24.3",
    "jsonschema==4.21.1",
    "python-dotenv==1.0.1"
]
requires-python = ">=3.10,<3.12"
license = { text = "Apache Software License 2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License"
]

[tool.poetry]
name = "test-engine-api"
version = "0.10.0"
description = "AI Verify is an AI governance testing framework and software toolkit that validates the performance of AI systems against a set of internationally recognised principles through standardised tests."
authors = ["AI Verify"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.24.3"
jsonschema = "4.21.1"
python-dotenv = "1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
coverage = "^7.3.2"
pytest-mock = "^3.12.0"
flake8 = "^6.1.0"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"