[tool.poetry]
name = "test-engine-app"
version = "0.9.0"
description = "This application project will support critical functionalities to provide backend tests for AI Verify."
authors = ["AI Verify"]
readme = "README.md"
packages = [{include = "test_engine_app"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
redis = "4.5.5"
numpy = "1.23.5"
pathos = "0.3.0"
semantic-version = "2.10.0"
aiohttp = "3.8.4"
python-dotenv = "1.0.0"


[tool.poetry.group.dev.dependencies]
black = "23.1.0"
pytest = "7.2.2"
coverage = "7.2.2"
pytest-mock = "3.10.0"
pre-commit = "3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
