[tool.poetry]
name = "test-engine-core-modules"
version = "0.9.0"
description = ""
authors = ["AI Verify"]
readme = "README.md"
packages = [{include = "test_engine_core_modules"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
joblib = "1.2.0"
libclang = "15.0.6.1"
numpy = "1.23.5"
scikit-learn = "1.2.2"
setuptools = "68.0.0"
lightgbm = "3.3.5"
xgboost = "1.7.4"
tensorflow = "2.12.0"
pandas = "1.5.3"
scipy = "1.11.1"
httpx = "0.24.1"
openapi-schema-validator = "0.6.0"
aiopenapi3 = {git = "https://github.com/commonism/aiopenapi3.git", rev = "8e9591162d1cef8cfc8e7840f34eb20c84af8c24"}


[tool.poetry.group.dev.dependencies]
black = "23.1.0"
pytest = "7.2.2"
coverage = "7.2.2"
pytest-mock = "3.10.0"
pre-commit = "3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
