[tool.poetry]
name = "test-engine-core-modules"
version = "0.10.0"
description = ""
authors = ["AI Verify"]
readme = "README.md"
packages = [{include = "test_engine_core_modules"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
joblib = "1.3.2"
libclang = "16.0.6"
numpy = "1.24.3"
scikit-learn = "1.4.0"
setuptools = "69.0.3"
lightgbm = "4.3.0"
xgboost = "2.0.3"
tensorflow = "2.13.0"
pandas = "2.2.0"
scipy = "1.12.0"
httpx = "0.26.0"
openapi-schema-validator = "0.6.2"
aiopenapi3 = "0.5.0"
aiometer = "0.5.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
coverage = "^7.3.2"
pytest-mock = "^3.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
