[tool.poetry]
name = "test-engine-core"
version = "0.9.0"
description = "This core project will support critical functionalities to support plugins and apps."
authors = ["AI Verify"]
readme = "README.md"
packages = [{include = "test_engine_core"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
redis = "4.5.5"
jsonschema = "4.17.3"
numpy = "1.23.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "3.0.4"
black = "23.1.0"
pytest = "^7.2.2"
coverage = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
