[project]
name = "test-engine-core"
version = "0.10.0"
authors = [
    { name="AI Verify" }
]
description = "This core project will support critical functionalities to support plugins and apps."
dependencies = [
    "async-timeout==4.0.3",
    "attrs==23.2.0",
    "jsonschema-specifications==2023.12.1",
    "jsonschema==4.21.1",
    "numpy==1.24.3",
    "redis==5.0.1",
    "referencing==0.33.0",
    "rpds-py==0.17.1",
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "Apache Software License 2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License"
]

[tool.poetry]
name = "test-engine-core"
version = "0.10.0"
description = "This core project will support critical functionalities to support plugins and apps."
authors = ["AI Verify"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
redis = "5.0.1"
numpy = "1.24.3"
jsonschema = "4.21.1"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
coverage = "^7.3.2"
pytest-mock = "^3.12.0"
flake8 = "^6.1.0"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
    "test_engine_core/",
    "tests/",
    "AUTHORS.rst",
    "LICENSE",
    "pyproject.toml",
    "README.md",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
