[tool.poetry]
name = "aiverify-stock-accumulated-local-effect"
version = "0.1.0"
description = ""
authors = ["Lionel Teo <93119265+imda-lionelteo@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "aiverify"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
