[project]
name = "aiverify_accumulated_local_effect"
version = "0.10.0"
description = ""
authors = [{ name = "AI Verify" }]
readme = "README.md"
dependencies = ["numpy==1.26.4", "pandas==2.2.2"]
requires-python = ">=3.10,<3.12"

[project.optional-dependencies]
dev = [
    "aiverify-test-engine[dev] @ {root:parent:parent:parent:parent:uri}/aiverify-test-engine",
]

[project.scripts]
aiverify_accumulated_local_effect = "aiverify_accumulated_local_effect.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
