[project]
name = "aiverify-accumulated-local-effect"
description = "AI Verify implementation of the Accumulated Local Effect algorithm. The algorithm provides black box explainations of how features and their corresponding values influence the prediction of a model."
authors = [{ name = "AI Verify" }]
readme = "README.md"
dependencies = ["numpy==1.26.4", "pandas==2.2.2", "aiverify-test-engine>=2.0.1"]
requires-python = ">=3.10,<3.12"
dynamic = ["version"]

[project.scripts]
aiverify_accumulated_local_effect = "aiverify_accumulated_local_effect.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "aiverify_accumulated_local_effect/algo.meta.json"
pattern = '"version":\s*"(?P<version>[^"]+)"'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
