[project]
name = "aiverify_fairness_metrics_toolbox_for_classification"
version = "0.10.0"
description = ""
authors = [{ name = "AI Verify" }]
readme = "README.md"
dependencies = [
    "numpy==1.26.4",
    "joblib==1.4.2",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
]
requires-python = ">=3.10,<3.12"

[project.optional-dependencies]
dev = [
    "test-engine-core[dev] @ {root:parent:parent:parent:parent:uri}/test-engine-core",
]

[project.scripts]
aiverify_fairness_metrics_toolbox_for_classification = "aiverify_fairness_metrics_toolbox_for_classification.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
