[tool.poetry]
name = "fairness-metrics-toolbox-for-regression"
version = "0.10.0"
description = ""
authors = ["AI Verify"]
readme = "README.md"
packages = [{include = "fairness_metrics_toolbox_for_regression"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
joblib = "1.3.2"
numpy = "1.24.3"
scikit-learn = "1.4.0"
pandas = "2.0.3"
scipy = "1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
