[project]
name = "aiverify-fairness-metrics-toolbox-for-regression"
description = "AI Verify Fairness Metrics Toolbox (FMT) for Regression contains a list of fairness metrics used to measure how resources (e.g. opportunities, food, loan, medical help) are allocated among the demographic groups (e.g. married male, married female) given a set of sensitive feature(s) (e.g. gender, marital status). This plugin is developed for regression models."
authors = [{ name = "AI Verify" }]
readme = "README.md"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "joblib==1.4.2",
    "scikit-learn==1.5.2",
    "aiverify-test-engine>=2.0.1",
]
requires-python = ">=3.10,<3.12"
dynamic = ["version"]

[project.scripts]
aiverify_fairness_metrics_toolbox_for_regression = "aiverify_fairness_metrics_toolbox_for_regression.__main__:main"

[tool.hatch.version]
path = "aiverify_fairness_metrics_toolbox_for_regression/algo.meta.json"
pattern = '"version":\s*"(?P<version>[^"]+)"'

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
