[tool.poetry]
name = "blur-corruptions"
version = "0.10.0"
description = ""
authors = ["AI Verify"]
readme = "README.md"
packages = [{include = "blur_corruptions"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "2.2.0"
numpy = "1.24.3"
pillow = "10.2.0"
scikit-learn = "1.4.0"
joblib = "1.3.2"
scikit-image = "0.22.0"
opencv-python = "4.9.0.80"
scipy = "1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
