[project]
name = "aiverify-environment-corruptions"
description = "Part of AI Verify image corruption toolbox. This package includes algorithms that add environmental corruptions (rain, fog and snow) to images at different severity levels, to test the robustness of machine learning models."
authors = [{ name = "AI Verify" }]
readme = "README.md"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pillow==10.4.0",
    "aiverify-test-engine[all]>=2.1.0",
    "albumentations>=2.0.4",
]
requires-python = ">=3.10,<3.13"
dynamic = ["version"]

[project.scripts]
aiverify_environment_corruptions = "aiverify_environment_corruptions.__main__:main"

[tool.hatch.version]
path = "aiverify_environment_corruptions/algo.meta.json"
pattern = '"version":\s*"(?P<version>[^"]+)"'

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
