[project]
name = "aiverify_general_corruptions"
version = "0.10.0"
description = ""
authors = [{ name = "AI Verify" }]
readme = "README.md"
dependencies = ["numpy==1.26.4", "pandas==2.2.2", "pillow==10.4.0"]
requires-python = ">=3.10,<3.12"

[project.optional-dependencies]
dev = [
    "test-engine-core[dev] @ {root:parent:parent:parent:parent:uri}/test-engine-core",
]

[project.scripts]
aiverify_general_corruptions = "aiverify_general_corruptions.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
